Fixed overflow and time range configs settings

--- a/src/components/navigation_bar/navigation_bar.module.css
+++ b/src/components/navigation_bar/navigation_bar.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     position: relative;
     float: left;
-    overflow: hidden;
+    overflow: auto;
 
     height: calc(100vh - 60px);
     width: 130px;
