--- a/src/pages/settings/settings.module.css
+++ b/src/pages/settings/settings.module.css
@@ -2,6 +2,7 @@
     display: flex;
     position: relative;
     float: left;
+    overflow: auto;
 
     height: calc(100vh - 60px);
     width: calc(100vw - 130px);
